test/libsolidity/syntaxTests/constants/constant_virtual.sol
uint constant virtual x;
// ----
// ParserError 2314: (14-21): Expected identifier but got 'virtual'
